--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,8 @@
         <log4j.version>1.2.16</log4j.version>
         <dbpedia.spotlight.version>0.7</dbpedia.spotlight.version>
         <jersey.client.version>2.25</jersey.client.version>
+        <lombok.version>1.16.12</lombok.version>
     </properties>
-
 
 
     <dependencies>
@@ -81,6 +81,12 @@
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-jackson</artifactId>
             <version>${jersey.client.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
