Code successfully runs on tomcat; removed CoreNLP models

--- a/pom.xml
+++ b/pom.xml
@@ -44,12 +44,12 @@
             <artifactId>stanford-corenlp</artifactId>
             <version>${nlp.version}</version>
         </dependency>
-        <dependency>
-            <groupId>edu.stanford.nlp</groupId>
-            <artifactId>stanford-corenlp</artifactId>
-            <version>${nlp.version}</version>
-            <classifier>models</classifier>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>edu.stanford.nlp</groupId>-->
+            <!--<artifactId>stanford-corenlp</artifactId>-->
+            <!--<version>${nlp.version}</version>-->
+            <!--<classifier>models</classifier>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
