--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,38 @@
     <groupId>de.bonn.eis</groupId>
     <artifactId>nlp-rdf</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://localhost:8080/manager/text</url>
+                    <server>TomcatServer</server>
+                    <path>/</path>
+                    <username>admin</username>
+                    <password>admin</password>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>${maven-war-plugin.version}</version>
+                <configuration>
+                    <warSourceDirectory>web</warSourceDirectory>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
         </plugins>
@@ -29,7 +52,10 @@
         <dbpedia.spotlight.version>0.7</dbpedia.spotlight.version>
         <jersey.client.version>2.25</jersey.client.version>
         <lombok.version>1.16.12</lombok.version>
-        <jersey-bundle.version>1.19.3</jersey-bundle.version>
+        <jersey-bundle.version>1.18.3</jersey-bundle.version>
+        <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
+        <asm-all.version>3.3.1</asm-all.version>
+        <maven-war-plugin.version>2.6</maven-war-plugin.version>
     </properties>
 
 
@@ -84,9 +110,14 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-bundle</artifactId>
-            <version>${jersey-bundle.version}</version>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet</artifactId>
+            <version>2.22.1</version>
+        </dependency>
+        <dependency>
+            <groupId>asm</groupId>
+            <artifactId>asm-all</artifactId>
+            <version>${asm-all.version}</version>
         </dependency>
     </dependencies>
 </project>
