--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,11 @@
         <jena.version>3.1.0</jena.version>
         <nlp.version>3.6.0</nlp.version>
         <jersey.client.version>2.25</jersey.client.version>
-        <lombok.version>1.16.12</lombok.version>
+        <lombok.version>1.16.14</lombok.version>
         <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
         <maven-war-plugin.version>2.6</maven-war-plugin.version>
         <commons-lang.version>2.6</commons-lang.version>
+        <jersey-container-servlet.version>2.22.1</jersey-container-servlet.version>
     </properties>
 
 
@@ -85,7 +86,13 @@
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet</artifactId>
-            <version>2.22.1</version>
+            <version>${jersey-container-servlet.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
