--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -11,6 +11,10 @@
             <param-name>jersey.config.server.provider.packages</param-name>
             <param-value>de.bonn.eis</param-value>
         </init-param>
+        <!--<init-param>-->
+            <!--<param-name>javax.ws.rs.Application</param-name>-->
+            <!--<param-value>de.bonn.eis.controller.MyApplication</param-value>-->
+        <!--</init-param>-->
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
