--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,8 @@
         <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
         <mockito-core.version>2.7.10</mockito-core.version>
         <junit.version>4.12</junit.version>
+        <commons-collections.version>3.2.2</commons-collections.version>
+        <guava.version>21.0</guava.version>
     </properties>
 
 
@@ -116,7 +118,12 @@
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
-            <version>3.2.2</version>
+            <version>${commons-collections.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
     </dependencies>
 </project>
