--- a/mytomcatdocker/Dockerfile-dev
+++ b/mytomcatdocker/Dockerfile-dev
@@ -3,3 +3,4 @@ MAINTAINER "Ainuddin Faizan <andyfaizan@gmail.com>"
 
 ADD settings.xml /usr/local/tomcat/conf/
 ADD tomcat-users.xml /usr/local/tomcat/conf/
+ADD wordnet /usr/local/tomcat/wordnet/
