--- a/mytomcatdocker/Dockerfile-prod
+++ b/mytomcatdocker/Dockerfile-prod
@@ -4,3 +4,4 @@ MAINTAINER "Ainuddin Faizan <andyfaizan@gmail.com>"
 ADD settings.xml /usr/local/tomcat/conf/
 ADD tomcat-users.xml /usr/local/tomcat/conf/
 ADD context.xml /usr/local/tomcat/conf/
+ADD wordnet /usr/local/tomcat/wordnet/
