Replace Stanford CoreNLP with OpenNLP

--- a/mytomcatdocker/Dockerfile-prod
+++ b/mytomcatdocker/Dockerfile-prod
@@ -5,3 +5,4 @@ ADD settings.xml /usr/local/tomcat/conf/
 ADD tomcat-users.xml /usr/local/tomcat/conf/
 ADD context.xml /usr/local/tomcat/conf/
 ADD wordnet.tar.gz /usr/local/tomcat/wordnet/
+ADD en-sent.bin /usr/local/tomcat/
