--- a/mytomcatdocker/Dockerfile-dev
+++ b/mytomcatdocker/Dockerfile-dev
@@ -4,3 +4,4 @@ MAINTAINER "Ainuddin Faizan <andyfaizan@gmail.com>"
 ADD settings.xml /usr/local/tomcat/conf/
 ADD tomcat-users.xml /usr/local/tomcat/conf/
 ADD wordnet.tar.gz /usr/local/tomcat/wordnet/
+ADD en-sent.bin /usr/local/tomcat/
