--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ hs_err_pid*
 *.iml
 *.iws
 *.log
+.classpath
+.project
+.settings
 
 # Maven
 log/
@@ -28,3 +31,4 @@ out/
 /src/main/java/de/bonn/eis/controller/MyApplication.java
 /src/main/java/de/bonn/eis/controller/InMemoryCache.java
 /src/main/java/de/bonn/eis/controller/DistractorLists.java
+wordnet
