--- a/mytomcatdocker/Dockerfile-dev
+++ b/mytomcatdocker/Dockerfile-dev
@@ -5,3 +5,5 @@ ADD settings.xml /usr/local/tomcat/conf/
 ADD tomcat-users.xml /usr/local/tomcat/conf/
 ADD wordnet.tar.gz /usr/local/tomcat/wordnet/
 ADD en-sent.bin /usr/local/tomcat/
+
+EXPOSE 8080
